--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,25 @@ html, body {
 }
 
 header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     height: 5vh;
+    width: 95%;
+    position: absolute;
+    top: 2%; /* ou outro valor desejado */
+    left: 50%;
+    transform: translateX(-50%);
+
     background-color: #ed1650;
-    color: #f3c9d4;
+    color: white;
     text-align: center;
+
+    border: black solid 2px;
+    border-radius: 90px 10px 90px 10px;
+    box-shadow: 5px 5px black;
 }
 
 .main_div {
@@ -32,7 +47,7 @@ header {
 }
 
 .decoder_input {
-    height: 95vh;
+    height: 100vh;
     flex-direction: row;
     background-image: linear-gradient(to left, rgba(237, 22, 80, 0.5), rgba(0, 0, 0, 0.5)),
         url("../resources/white-texture.jpg");
@@ -67,19 +82,21 @@ header {
 
 @keyframes floatAndScale {
     0% {
-      transform: translateY(0) scaleX(1);
+      transform: translateY(0) scale(1);
     }
     50% {
-        transform: translateY(-40px) scaleX(-1);
+        transform: translateY(-20px) scale(1.1);
     }
     100% {
-        transform: translateY(0) scaleX(1);
+        transform: translateY(0) scale(1);
     }
 }
 
 .logo img {
     animation: floatAndScale 8s ease-in-out infinite;
     height: 50%;
+    position: relative;
+    left: 15%;
     width: auto;
 }
 
@@ -90,12 +107,13 @@ header {
 }
 
 .input textarea {
-    height: 75%;
-    font-size: 14px;
+    height: 60%;
+    font-size: 12px;
     text-transform: uppercase;
     resize: none;
 
-    border: #ed1650 solid 2px;
+    border: black solid 3px;
+    border-radius: 8px;
     transition: all .3s ease-in-out;
 
     /* Para aumentar o espaçamento entre a fonte interna*/
@@ -104,31 +122,31 @@ header {
 
 .input textarea:focus{
     outline: none;
-    border: #2a0089 solid 2px;
     box-shadow: none;
 }
 
 .input button {
     height: 4%;
     width: 30%;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: transparent;
     
     border: #ed1650 solid 2px;
     background-color: #ed1650;
     color: white;
-    border-radius: 5px;
+    border-radius: 90px 10px 90px 10px;
     font-size: 1.2rem;
     font-weight: 900;
+
+    box-shadow: 5px 5px black;
 
     transition: all .2s ease-in-out;
 }
 
 .input button:hover{
     color: white;
-    background-color: #2a0089;
-    border: #2a0089 solid 2px;
-    font-size: 1.3rem;
+    box-shadow: 10px 10px black;
+    border: black solid 2px;
 }
 
 
@@ -144,25 +162,35 @@ header {
 
 .allEditors,
 .lastEditor{
+    text-align: center;
+
+    border: #2a0089 solid 2px;
+    border-radius: 10px;
     background-color: #f2f2f2;
-    box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px #2a0089;
     
     margin: 10px;
     width: 45%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
-.allEditors p {
-    padding: 5px;
+.allEditors h1, 
+.lastEditor h1 {
+    position: sticky;
+    border-radius: 7px 7px 0px 0px;
+    text-align: center;
+    width: 100%;
+    background-color: #ed1650;
+    color: white;
+
+    margin: 0; /* remove espaços extras acima do h1 */
+    padding: 3px; /* opcional: dá um respiro ao texto */
 }
 
-.lastEditor {
-    height: 200px;
-}
+.allEditors p,
+.lastEditor p
+{padding: 8px;}
+
+.lastEditor {height: 200px;}
 
 .divBlocks {
     margin-top: 30px;
@@ -174,6 +202,8 @@ header {
 }
 
 .divBlocks .divBlock {
+    border: #2a0089 solid 2px;
+    border-radius: 10px;
     background-color: #f2f2f2;
     width: 20%;
 
@@ -186,11 +216,12 @@ header {
     justify-content: center;
     text-align: left;
 
-    box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px #2a0089;
 }
 
 .divBlocks .divBlock h3{
-    color: #2a0089;
+    background-color: #2a0089;
+    color: white;
 }
 
 .divBlocks .divBlock p{
